--- a/.buildkite/docker-compose.yml
+++ b/.buildkite/docker-compose.yml
@@ -13,3 +13,18 @@ services:
     volumes:
       - ../:/src
     working_dir: /src
+
+  test:
+    build:
+      context: .
+      dockerfile: ./images/test.Dockerfile
+    volumes:
+      - ../:/src
+    working_dir: /src
+    depends_on:
+      - dynamodb
+
+  dynamodb:
+    image: amazon/dynamodb-local:1.11.477
+    ports:
+      - "8000:8000"
