passing dynamo url through env var

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -16,7 +16,7 @@ steps:
   - name: test
     command:
       - dockerize -wait http://dynamodb:8000/shell/ -timeout 60s
-      - make test
+      - DYNAMO_URL=http://dynamodb:8000 make test
     plugins:
       - docker-compose#v3.1.0:
           run: test
