--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -6,6 +6,6 @@ steps:
       - dockerize -wait http://dynamodb:8000/shell/ -timeout 60s
       - DYNAMO_URL=http://dynamodb:8000 make test
     plugins:
-      - docker-compose#v3.1.0:
-          run: test
-          config: .buildkite/docker-compose.yml
+      - docker#v3.3.0:
+          image: indebted-test
+          network: indebted-net
